--- a/practica_3/impl1/practica3_impl1_summary.html
+++ b/practica_3/impl1/practica3_impl1_summary.html
@@ -8,11 +8,11 @@
 </HEAD>
 <PRE><TABLE border=1 width=100% cellspacing=0 cellpadding=2><small>
 <TR>
-<TD align='center' BGCOLOR='#000099' COLSPAN='4'><SPAN style="COLOR: #FFFFFF"><B>practica2 project summary</B></SPAN></TD>
+<TD align='center' BGCOLOR='#000099' COLSPAN='4'><SPAN style="COLOR: #FFFFFF"><B>practica3 project summary</B></SPAN></TD>
 </TR>
 <TR>
 <TD align='left' BGCOLOR='#DEE8F4' COLSPAN='1'><SPAN style="COLOR: #000000">Module Name:</SPAN></TD>
-<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='1'><SPAN style="COLOR: #000000">practica2</SPAN></TD>
+<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='1'><SPAN style="COLOR: #000000">practica3</SPAN></TD>
 <TD align='left' BGCOLOR='#DEE8F4' COLSPAN='1'><SPAN style="COLOR: #000000">Synthesis:</SPAN></TD>
 <TD align='left' BGCOLOR='#FFFFFF' COLSPAN='1'><SPAN style="COLOR: #000000">Lattice LSE</SPAN></TD>
 </TR>
@@ -48,11 +48,11 @@
 </TR>
 <TR>
 <TD align='left' BGCOLOR='#DEE8F4' COLSPAN='1'><SPAN style="COLOR: #000000">Logic preference file:</SPAN></TD>
-<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='3'><SPAN style="COLOR: #000000">practica2.lpf</SPAN></TD>
+<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='3'><SPAN style="COLOR: #000000">practica3.lpf</SPAN></TD>
 </TR>
 <TR>
 <TD align='left' BGCOLOR='#DEE8F4' COLSPAN='1'><SPAN style="COLOR: #000000">Physical Preference file:</SPAN></TD>
-<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='3'><SPAN style="COLOR: #000000">impl1/practica2_impl1.prf</SPAN></TD>
+<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='3'><SPAN style="COLOR: #000000">impl1/practica3_impl1.prf</SPAN></TD>
 </TR>
 <TR>
 <TD align='left' BGCOLOR='#DEE8F4' COLSPAN='1'><SPAN style="COLOR: #000000">Product Version:</SPAN></TD>
@@ -62,15 +62,15 @@
 </TR>
 <TR>
 <TD align='left' BGCOLOR='#DEE8F4' COLSPAN='1'><SPAN style="COLOR: #000000">Updated:</SPAN></TD>
-<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='3'><SPAN style="COLOR: #000000">2017/10/14 17:34:00</SPAN></TD>
+<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='3'><SPAN style="COLOR: #000000">2017/10/14 17:58:30</SPAN></TD>
 </TR>
 <TR>
 <TD align='left' BGCOLOR='#DEE8F4' COLSPAN='1'><SPAN style="COLOR: #000000">Implementation Location:</SPAN></TD>
-<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='3'><SPAN style="COLOR: #000000">C:/Users/JCVELMON/Desktop/Semestre Actual/DSD/Flip Flops/practica_2/impl1</SPAN></TD>
+<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='3'><SPAN style="COLOR: #000000">C:/Users/JCVELMON/Desktop/Semestre Actual/DSD/practica_3/impl1</SPAN></TD>
 </TR>
 <TR>
 <TD align='left' BGCOLOR='#DEE8F4' COLSPAN='1'><SPAN style="COLOR: #000000">Project File:</SPAN></TD>
-<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='3'><SPAN style="COLOR: #000000">C:/Users/JCVELMON/Desktop/Semestre Actual/DSD/Flip Flops/practica_2/practica2.ldf</SPAN></TD>
+<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='3'><SPAN style="COLOR: #000000">C:/Users/JCVELMON/Desktop/Semestre Actual/DSD/practica_3/practica3.ldf</SPAN></TD>
 </TR>
 </small></TABLE>
 <BR>
